# lie.hpp

./: CMakeLists.txt  README.md  gnuplot.hpp  lie.hpp
examples/: 01-lie.cpp  01-matrix.cpp  01-se3.cpp  01-so3.cpp  01-vector.cpp  05-plot.cpp  10-perturbations.cpp  10-se_perturbations.cpp  10-so_perturbations.cpp  15-localization.cpp  15-naive_localization.cpp  CMakeLists.txt
tests/: CMakeLists.txt  so3_test.cpp
